--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "@octokit/rest": "^18.1.0",
+    "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
+    "trello": "^0.10.0"
+  }
 }
