[ENV] More environments variables added (github + channel)

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,14 @@
 APP_KEY=
 USER_TOKEN=
+TRELLO_COLUMN=
 DISCORD_BOT_TOKEN=
-DISCORD_CHANNEL=
+DISCORD_BOT_USERNAME=
+DISCORD_PR_COMMENT_CHANNEL=
+DISCORD_BUG_CHANNEL=
+DISCORD_CARD_COMMENT_CHANNEL=
 GITHUB_PAT=
 GITHUB_REPOSITORY_OWNER=
+GITHUB_PR_BODY=
+GITHUB_REPOSITORY=
+GITHUB_REPOSITORY_BASE_BRANCH=
+GITHUB_REPOSITORY_HEAD_BRANCH=
