--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "@octokit/rest": "^18.1.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "trello": "^0.10.0"
+    "node-fetch": "^2.6.1"
   }
 }
