--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "heroku-postbuild": "./init.sh"
   },
   "author": "",
   "license": "ISC",
