--- a/package.json
+++ b/package.json
@@ -5,15 +5,22 @@
   "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "develop": "nodemon index.js",
     "start": "node index.js",
-    "heroku-postbuild": "./init.sh"
+    "migrate": "node-pg-migrate"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^18.1.0",
+    "body-parser": "^1.19.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "node-fetch": "^2.6.1"
+    "express": "^4.17.1",
+    "express-promise-router": "^4.0.1",
+    "node-fetch": "^2.6.1",
+    "node-pg-migrate": "^5.9.0",
+    "nodemon": "^2.0.7",
+    "pg": "^8.5.1"
   }
 }
